tests/paczka1/fuzzy1/25437693.err
Error in line 2: 7IF A289 97,2
Error in line 8: A63 A68 6b,4
Error in line 7: A63 A289 15,5
Error in line 13: HBnzfb0Dn S708 3,2
Error in line 22: 7IF A289 35,5
Error in line 19: TuVH79R0EI9 A289 128,7
